--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch app/server.ts",
-    "build" :"tsc --build"
+    "build": "tsc --build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "fastify": "^4.14.1"
   },
   "devDependencies": {
+    "@types/node": "^18.14.6",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   }
