--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch app/server.ts",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "start": "node build/server.js"
   },
   "keywords": [],
   "author": "",
